added form and changed photos

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>寰宇轩艺院 Global Arts Collective</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,38 +24,195 @@
 
   <body>
 
-    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">Business Casual</div>
-    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">寰宇轩艺院 Global Arts Collective</div>
+    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">Art for the World</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Global Arts Collective</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+              <a class="nav-link text-uppercase text-expanded" href="index.html">首页
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+              <a class="nav-link text-uppercase text-expanded" href="about.html">项目介绍</a>
             </li>
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="blog.html">Blog</a>
+              <a class="nav-link text-uppercase text-expanded" href="blog.html">项目报名</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+              <a class="nav-link text-uppercase text-expanded" href="contact.html">联系我们</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="container">
+    <div class="bg-faded p-4 my-4">
+      <!-- Image Carousel -->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <img class="d-block img-fluid w-100" src="img/Oxford_slide.jpg" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <!-- can add caption if wanted <h3 class="text-shadow">First Slide</h3>
+              <p class="text-shadow">This is the caption for the first slide.</p> -->
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block img-fluid w-100" src="img/Shanghai_slide.jpg" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <!-- <h3 class="text-shadow">Second Slide</h3>
+              <p class="text-shadow">This is the caption for the second slide.</p> -->
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block img-fluid w-100" src="img/Toronto_slide.jpg" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <!-- <h3 class="text-shadow">Third Slide</h3>
+              <p class="text-shadow">This is the caption for the third slide.</p> -->
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+    <div class="bg-faded p-4 my-4">
+      <hr class="divider">
+      <h2 class="text-center text-lg text-uppercase my-0">项目
+        <strong>报名</strong>
+      </h2>
+      <hr class="divider">
+      <div class="row">
+        <div class="col-lg-6" align=left>
+          <ol>
+            <li> 招生对象：在校本科生、硕士生（不限于艺术专业）</li>
+            <li> 项目日程：2018年冬季1月24日 – 2月6日，为期14天 </li>
+            <li> 项目费用：</li>
+            <ul>
+              <li>项目费用合计28800元，包括以下各项事项: 牛津课程费、材料费用、英国住宿费用、餐饮费用、院校机构及旅游景点的参访游览费、电话通讯费、接送机费用及国际旅行保险等各项费用; *此费用不含国际机票费、护照费、签证费及个人消费 </li>
+              <li>签证办理：项目组将为访英学生开具学术交流邀请函（非旅游签证），并帮助学生直接、快速、高效的递交办理签证，其所出费用将根据有关机构出示发票实报实销。</li>
+              <li>机票购买：项目组可根据需求替学生代购机票，其所出费用将根据有关机构出示发票实报实销。</li>
+            </ul>
+            <li> 报名材料	</li>
+            <ul>
+              <li>至少六个月有效期护照（至项目结束算起）</li>
+              <li>项目报名申请表</li>
+            </ul>
+            <li> 报名流程：</li>
+            <ul>
+              <li>网站报名：www.xxxxxx，填写个人报名信息，并点击发送</li>
+              <li>邮箱报名： 请将报名表填好后，发送至项目组邮箱apply@gac.com</li>
+              <li>在收到报名个人信息之后，项目组老师将与您取得联系，并通知安排面试及相关事宜</li>
+              <li>牛津项目组发出确认函、协议书</li>
+              <li>缴纳费用并完成注册；牛津项目组老师协助学员签证办理，准备出国手续</li>
+            </ul>
+            <li> 其它报名方式: 项目合作院校的同学可在本校国际交流处或项目指定任课老师处报名。</li>
+          </ol>
+        </div>
+        <div class="col-lg-6" align=right>
+          <form id="gform" action="https://script.google.com/macros/s/AKfycbxhCDdhv_jaei4ljNZcb_tFoeBCJIp70VVBdwnosPviLeUdwYoi/exec" method="post" align = "center">
+        		<fieldset class="pure-group">
+        		  <label for="name">Name 姓名: </label>
+        		  <input id="name" name="name"/>
+        		  <br>
+        		  <label for="pingyin">姓名拼音: </label>
+        		  <input id="pingyin" name="pingyin" >
+              <br>
+        		  <label for="phonenumber">Phone Number 电话: </label>
+        		  <input id="phonenumber" name="phonenumber" >
+              <br>
+              <label for="emergencynumber">Emergency Number 紧急联系人电话（推荐父母）: </label>
+        		  <input id="emergencynumber" name="emergencynumber" >
+              <br>
+              <label for="Passport">Passport No. 护照号: </label>
+        		  <input id="Passport" name="Passport" >
+              <br>
+              <label for="University">University 大学: </label>
+        		  <input id="University" name="University" >
+              <br>
+              <label for="Wechat">Wechat 微信号: </label>
+        		  <input id="Wechat" name="Wechat" >
+              <br>
+              <label for="Year">Year 年纪: </label>
+        		  <input id="Year" name="Year" >
+              <br>
+              <label for="IDnumber">ID Number 身份证号: </label>
+        		  <input id="IDnumber" name="IDnumber" >
+        		</fieldset>
+        		<br>
+            <fieldset class="pure-group">
+              <label for="genderselect"> Sex 性别
+              <select class="form-control" id="genderselect">
+                <option>Male 男</option>
+                <option>Female 女</option>
+              </select>
+            </fieldset
+        		<fieldset class="pure-group">
+        		  <label for="email">Email Address 电子邮件:</label>
+        		  <input id="email" name="email" type="email" value=""
+        		  required placeholder="your.name@email.com"/>
+        		  <span id="email-invalid" style="display:none">
+        			Must be a valid email address</span>
+        		</fieldset>
+
+            <fieldset class="pure-group">
+        		  <label for="englishlevel">English Level 四六级或其他英语成绩: </label>
+        		  <input id="englishlevel" name="englishlevel"/>
+        		  <br>
+        		  <label for="healthcondition">Health Condition 健康状况（精种和身体）: </label>
+        		  <input id="healthcondition" name="healthcondition" >
+              <br>
+        		  <label for="major">Major 专业: </label>
+        		  <input id="major" name="major" >
+              <br>
+              <label for="hometown">Hometown 家乡: </label>
+        		  <input id="hometown" name="hometown" >
+              <br>
+            </fieldset>
+
+            <fieldset class="pure-group">
+              <label for="dietary"> Dietary Requirements 餐食要求
+              <select class="form-control" id="dietary">
+                <option>None 没有</option>
+                <option>Vegetarian 素食主义者</option>
+                <option>Other 其他过敏食物</option>
+              </select>
+              <label for="otherdietary"> List other dietary restrictions 描述忌口</label>
+              <textarea class="form-control" id="otherdietary" rows="3"></textarea>
+            </fieldset>
+        		<div align="center" class="featurette" id="fifth">
+
+        			<span class="input-group-addon" id="submit-btn">
+                    	<button type="submit" class="btn btn-primary">
+                        <span class="btn-label"><i class="glyphicon glyphicon-ok"></i></span>Submit Application 报名！</button>
+                    </span>
+        		</div>
+        	 </form>
+        </div>
+      </div>
+
+
+    <!-- blog post card formats <div class="container">
 
       <div class="bg-faded p-4 my-4">
         <div class="card card-inverse">
@@ -94,7 +251,7 @@
       </div>
 
       <!-- Pagination -->
-      <div class="bg-faded p-4 my-4">
+      <!-- <div class="bg-faded p-4 my-4">
         <ul class="pagination justify-content-center mb-0">
           <li class="page-item">
             <a class="page-link" href="#">&larr; Older</a>
@@ -103,14 +260,13 @@
             <a class="page-link" href="#">Newer &rarr;</a>
           </li>
         </ul>
-      </div>
+      </div> -->
 
-    </div>
     <!-- /.container -->
 
     <footer class="bg-faded text-center py-5">
       <div class="container">
-        <p class="m-0">Copyright &copy; Your Website 2017</p>
+        <p class="m-0">Copyright &copy; Global Arts Collective 2017</p>
       </div>
     </footer>
 
