--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
 
   <body>
 
-    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">Business Casual</div>
-    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">寰宇轩艺院 Global Arts Collective</div>
+    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">Art for the World</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+              <a class="nav-link text-uppercase text-expanded" href="index.html">首页
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -58,21 +58,108 @@
     <div class="container">
 
       <div class="bg-faded p-4 my-4">
+        <!-- Image Carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid w-100" src="img/Oxford_slide.jpg" alt="">
+              <div class="carousel-caption d-none d-md-block">
+                <!-- can add caption if wanted <h3 class="text-shadow">First Slide</h3>
+                <p class="text-shadow">This is the caption for the first slide.</p> -->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid w-100" src="img/Shanghai_slide.jpg" alt="">
+              <div class="carousel-caption d-none d-md-block">
+                <!-- <h3 class="text-shadow">Second Slide</h3>
+                <p class="text-shadow">This is the caption for the second slide.</p> -->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid w-100" src="img/Toronto_slide.jpg" alt="">
+              <div class="carousel-caption d-none d-md-block">
+                <!-- <h3 class="text-shadow">Third Slide</h3>
+                <p class="text-shadow">This is the caption for the third slide.</p> -->
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+      <div class="bg-faded p-4 my-4">
         <hr class="divider">
         <h2 class="text-center text-lg text-uppercase my-0">项目
           <strong>介绍</strong>
         </h2>
         <hr class="divider">
         <div class="row">
-          <div class="col-lg-6">
-            <img class="img-fluid mb-4 mb-lg-0" src="img/Make_Art_Not_War.jpg" alt="">
-          </div>
-          <div class="col-lg-6">
             <p>2018冬季英伦艺术研习项目主要面对艺术专业，以及热爱艺术的在读大学生及研究生。参与该项目的学生将在牛津大学的学院，及艺术之都伦敦学习生活两周。在此期间，学生们将徜徉在世界顶级的艺术殿堂中，零距离感受和学习世界艺术大师的作品，了解西方艺术世界的体系，在名校名师一对一指导下，深度挖掘每一位学生的独立创作潜力，增强表达能力，提高大家对艺术作品的鉴赏和领悟能力。</p>
             <p>项目研习期间，学生们还将亲身感受悠久历史和灿烂文化的世界顶级艺术学府的校园文化之魅力，与知名艺术家及优秀艺术学生对话交流，拓宽眼界及人脉，感受非同一般的英伦文化。</p>
+        </div>
+        <hr class="divider">
+        <div class="row">
+          <div class="col-sm-3">
+            <p> <strong> 1.	学术课程 </strong> </p>
+            <img class="img-fluid" src="img/Aboutus_1.jpg" alt="" style="max-height:100px">
+            <br>
+            <p>I．	艺术理论课: 世界著名博物馆及美术馆现场教学; 与世界大师零距离面对面交流的过程中，对艺术有更深刻的领悟和理解。</p>
+            <p> II．	工作室创作系列课: 对理论的实践转化能力、作品创作的自由发挥能力、独立思考能力，并深度挖掘学生的艺术潜力；名校名师一对一指导，获得及时反馈，收获看得见的成长；导师艺术评论，进一步挖掘学生创作时的内心感受，因材施教，取人之长，补己之短；个人作品展，学习如何布展，并在观众参观展览中有效锻炼自己的展示能力和表达沟通技能，展示学生的个人风采。</p>
+          </ul>
+          </div>
+          <div class="col-sm-3">
+            <p> <strong> 2.	未来规划工作坊 </strong> </p>
+            <img class="img-fluid" src="img/Aboutus_2.jpg" alt="" style="max-height:100px">
+            <br>
+            <p>I．	研究生申请工作坊: 西方艺术院校申请留学讲座；世界一流艺术院校参访；研究生报考个人作品准备指导；与国外艺术生深度交流，了解国外艺术生的生活、工作及创作环境，为未来提前做好计划和准备。</p>
+            <p>II．	艺术家职业规划: 提供各种职业生涯体验。比如艺术顾问，艺术设计，以及艺术商业等；参访艺术家工作室，直接与知名艺术家面对面交流。</p>
+          </div>
+          <div class="col-sm-3">
+            <p> <strong> 3.	多样艺术形式及文化探索 </strong>  </p>
+            <img class="img-fluid" src="img/Aboutus_3.jpg" alt="" style="max-height:100px">
+            <br>
+            <p>I．	音乐工作坊</p>
+            <p>II. 舞蹈工作坊（西方交谊舞）</p>
+            <p>III．	表演艺术工作坊</p>
+            <p>IV．	戏剧艺术工作坊</p>
+            <p>V．	西方传统与礼仪课</p>
+            <p>VI．	牛津大学唱诗班</p>
+            <p>VII．	红酒品鉴学堂</p>
+            <p>VIII．	传统英式下午茶</p>
+            <p>IX．	牛津大学正装高桌晚宴</p>
+          </div>
+          <div class="col-sm-3">
+            <p> <strong> 4.	游览 </strong> </p>
+            <img class="img-fluid" src="img/Aboutus_4.jpg" alt="" style="max-height:100px">
+            <br>
+            <p>I．	哈利波特拍摄地 – 牛津</p>
+            <p>II. 世界经济文化名城之旅-伦敦）</p>
+            <p>III．	文学巨匠故居之旅-莎士比亚故居</p>
+            <p>秉承着因材施教，及时反馈的教育理念，项目老师将会根据每位学生不同背景、特长、需求等，为他们特别制定不同的教学计划及目标。更通过一系列精心设计的艺术职业、学术生涯规划课程，帮助每名艺术生能够对自己未来的学科领域及职业道路有更清晰的认识和切实可行的规划。</p>
           </div>
         </div>
+        <hr class="divider">
+        <div class="row">
+            <p> <strong> 更多福利：</strong> </p>
+            <ul>
+              <li> 学生们将有机会获得“全球杰出艺术青年选拔计划”的申报指导，帮助其更好地了解申报流程，以及如何准备自己的参赛作品。</li>
+              <li> 全程参加本课程并通过考核的学生，将获颁结业证书。</li>
+              <li>在本项目期间表现突出的学员，还可获得由项目组颁发的奖学金及奖品，并有机会之后获得授课老师富有含金量的推荐信。</li>
+        </div>
       </div>
+
+
 <!-- INTRODUCE TEAM BIOS SECTION
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
@@ -119,7 +206,7 @@
 
     <footer class="bg-faded text-center py-5">
       <div class="container">
-        <p class="m-0">Copyright &copy; Your Website 2017</p>
+        <p class="m-0">Copyright &copy; Global Arts Collective 2017</p>
       </div>
     </footer>
 
