--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
   <head>
-
+    <script
+       src="https://code.jquery.com/jquery-3.2.1.min.js"
+       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+       crossorigin="anonymous">
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -37,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+              <a class="nav-link text-uppercase text-expanded" href="index.html">首页
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -67,24 +71,24 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/Globe_In_Hand.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/Oxford_slide.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">First Slide</h3>
-                <p class="text-shadow">This is the caption for the first slide.</p>
+                <!-- can add caption if wanted <h3 class="text-shadow">First Slide</h3>
+                <p class="text-shadow">This is the caption for the first slide.</p> -->
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/Make_Art_Not_War.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/Shanghai_slide.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Second Slide</h3>
-                <p class="text-shadow">This is the caption for the second slide.</p>
+                <!-- <h3 class="text-shadow">Second Slide</h3>
+                <p class="text-shadow">This is the caption for the second slide.</p> -->
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/Woman_Drawing.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/Toronto_slide.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Third Slide</h3>
-                <p class="text-shadow">This is the caption for the third slide.</p>
+                <!-- <h3 class="text-shadow">Third Slide</h3>
+                <p class="text-shadow">This is the caption for the third slide.</p> -->
               </div>
             </div>
           </div>
@@ -98,32 +102,32 @@
           </a>
         </div>
         <!-- Welcome Message -->
-        <div class="text-center mt-4">
+        <!-- <div class="text-center mt-4">
           <div class="text-heading text-muted text-lg">Welcome To</div>
           <h1 class="my-2">寰宇轩艺院 Global Arts Collective</h1>
           <div class="text-heading text-muted text-lg">By
             <strong>Oxford Prospects Programmes</strong>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">About
-          <strong>Us</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">简
+          <strong>介</strong>
         </h2>
         <hr class="divider">
-        <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/GAC_Logo.jpg" alt="">
         <p>Global Arts Collective致力于为中国青年搭建顶级中西艺术教育桥梁，并联合牛津大学、伦敦皇家艺术学院、伦敦大学(Goldsmiths)艺术学院、加拿大女王大学等世界顶级名校师资, 运用世界一流艺术资源，为中国渴望追求艺术的青年打开一扇通往世界的大门。 </p>
         <p>我们希望通过该桥梁，吸引全球对艺术有追求的青年，近距离接触并领略世界顶级艺术殿堂，也希望提供给每一位喜爱艺术、在艺术道路上孜孜不倦的追求者在世界一流大学学习的机会。</p>
       </div>
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Building a
-          <strong>Global Art Platform</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">搭建
+          <strong>国际一流艺术平台</strong>
         </h2>
         <hr class="divider">
+        <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/global_art_platform.jpg" alt="">
         <p>GAC倾力于搭建国际一流艺术平台，每年开展 “全球杰出艺术青年选拔计划” ，该计划将由牛津大学艺术系和伦敦皇家艺术学院的优秀艺术家、教授以及学者们进行精选。在全世界范围内选拔15名，年龄在35岁以下，在艺术领域有突出成就或独特风格的青年，为他们在伦敦、多伦多、纽约、罗马、佛罗伦萨等世界艺术之都举办个人作品展览，并出版其艺术展品目录。</p>
         <p>除此之外，GAC还致力于打造中国最大的青年艺术家联盟，该联盟旨在服务所有极具才华的中国艺术青年，为他们的发展创建一个互助平台，为这些后起之秀在国内、国际艺术界享有一席之地推波助澜，使其未来获得强劲的发展。</p>
         <p>GAC每年会举办中西文化艺术节，邀请在不同领域有突出成就的中国艺术青年发表演讲或演出。作为中国文化和艺术的优秀代表，其人员将有机会和西方各界文化艺术领域有卓越贡献的艺术家，学者们共同参与文化艺术交流，使双方的合作纽带连结的更紧密，更深入地促进中西在文化及艺术领域的交流和合作。</p>
