--- a/contact.html
+++ b/contact.html
@@ -64,13 +64,13 @@
         </h2>
         <hr class="divider">
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-lg-6">
             <!--map if needed <div class="embed-responsive embed-responsive-16by9 map-container mb-4 mb-lg-0">
               <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
             </div> -->
-            <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/About_Us_Photo.jpg" alt="">
+            <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/Contact_Us_Photo.jpg" alt="">
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <h5 class="mb-0">微信咨询:</h5>
             <div class="mb-4">jesswei（微信添加请注明“姓名xxx – 英伦艺术研习项目”）</div>
             <h5 class="mb-0">电话咨询:</h5>
